improved recent search result screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -161,4 +161,5 @@
     <string name="player_auto_continue_play_summary">Відтворення буде розпочинатися з останньої збереженої позиції</string>
     <string name="dialog_continue_title">Продовжити?</string>
     <string name="dialog_continue_playning_summary">Продовжити відтворення з %s?</string>
+    <string name="state_no_recent_search_desc">Почніть шукати аніме і тут з\'явиться історія вашого пошуку</string>
 </resources>
