--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -147,6 +147,7 @@
     <string name="idm_not_found">1DM не встановлено</string>
     <string name="dvget_not_found">ADM не встановлено</string>
     <string name="quality_choser_title">Якість відео</string>
+    <string name="message_error_no_internet">Відсутнє інтернет-з\'єднання</string>
     <string name="message_error_video_has_empty_stream_lisnks">Виникла помилка, посилання на файли пусті</string>
     <string name="pref_restart_dialog_title">Потрібний перезапуск</string>
     <string name="pref_restart_dialog_description">Щоб отримати ефект від цих змін, потрібен перезапуск застосунку. Перезапусти застосунок зараз?</string>
