--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -174,5 +174,5 @@
     <string name="fast_seek">Швидка перемотка</string>
     <string name="hikka_login_succes">Ви успішно авторизувались в hikka.io!</string>
     <string name="hikka_login">Увійти на hikka.io для сихронізації ваших переглядів на сайт</string>
-    <string name="hikka_loggined">Ви авторизовані на hikka.io. Натисніть щоб вийти</string>
+    <string name="hikka_loggined">Вітаємо %s! \nНатисніть щоб вийти</string>
 </resources>
