--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -176,4 +176,5 @@
     <string name="hikka_login">Увійти на hikka.io для сихронізації ваших переглядів на сайт</string>
     <string name="hikka_loggined">Вітаємо %s! \nНатисніть щоб вийти</string>
     <string name="read_more_details">Детальніше</string>
+    <string name="error_loading_torrents">Не вдалося завантажити торренти. Спробуйте пізніше.</string>
 </resources>
